<resources>
    <string name="app_name">Karay</string>

    <!--Facebook-->
    <string name="facebook_app_id">665464957180840</string>
    <string name="fb_login_protocol_scheme">fb665464957180840</string>

    <!--ScreenNames-->
    <string name="screen_home">Home</string>
    <string name="screen_add_new">Add Clothing Photo</string>
    <string name="screen_additional_info">Add Additional Info</string>

    <!--General-->
    <string name="no_more_load_retry">No more items to load. Refresh to retry.</string>
    <string name="endless_disabled">No more items to load (max reached).</string>
    <string name="endless_cancel">Cancelled by the user.</string>
    <string name="endless_error">An error occurred while loading more items.</string>
    <string name="search">Search</string>
    <string name="txt_apply_filters">Apply Filters</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="txt_logging_in">Logging in..Please wait..</string>
    <string name="txt_logging_in_failed">Unable to log you in at this time.</string>
    <string name="txt_logging_in_cancelled">Login was cancelled..</string>
    <string name="txt_logout">Logout</string>

    <!--Errors-->
    <string name="error_camera_permissions">Camera permissions are required!</string>

    <!--GeneralText-->
    <string name="txt_awesome">Awesome!</string>
    <string name="txt_add">Add</string>
    <string name="txt_next">Next</string>
    <string name="txt_skip">Skip</string>
    <string name="txt_save">Save</string>
    <string name="txt_optional">(Optional)</string>

    <!--Navigation Drawer-->
    <string name="navigation_drawer_header_content_description">Navigation drawer header logo</string>

    <!--Pages-->
    <string name="page_my_wardrobe">My Wardrobe</string>
    <string name="page_in_closet">In Closet</string>
    <string name="page_kept_away">Kept Away</string>

    <!--EmptyContent-->
    <string name="txt_account_created">You have successfully created your account, now let\'s add your first clothing from your wardrobe.</string>

    <!--AddNewFragment-->
    <string name="txt_add_image">Add your dress\'s photo</string>
    <string name="txt_take_photo">Take Photo</string>
    <string name="txt_retake_photo">Re-Take Photo</string>
    <string name="txt_preparing_image">Preparing image..</string>

    <!--BrandsList-->
    <string name="page_brands_list">Brands List</string>

    <!--AddAdditionalInfoFragment-->
    <string name="txt_add_additional_info">Add your dress\'s brand, date purchase, season info</string>
    <string name="txt_enter_brand_name">Enter brand name here</string>
    <string name="txt_enter_date_purchased">Enter date purchased</string>
    <string name="txt_enter_price">Enter Price</string>
    <string name="txt_enter_season">Enter season info</string>
    <string name="txt_enter_size">Enter Size info</string>
    <string name="txt_is_kept_away">Is Kept Away?</string>
    <string name="txt_is_un_stitched">Is Un-stitched?</string>
    <string name="txt_is_a_gift">Is a Gift?</string>
    <string name="txt_add_info_later">You can always update info later.</string>
    <string name="txt_skip_save">Skip and Save</string>

    <!--Filters-->
    <string name="txt_filter_size">Size</string>
    <string name="txt_added">Added</string>
    <string name="txt_purchased">Purchased</string>
    <string name="txt_season_name">Season</string>

    <!--DetailFragment-->
    <string name="txt_confirm_delete_post">Are you sure you want to delete this post?</string>

</resources>
