<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/main_fragment">

    <fragment
        android:id="@+id/main_fragment"
        android:name="com.blackbox.apps.karay.ui.fragments.main.MainFragment"
        android:label="@string/screen_home"
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/action_MainFragment_to_AddNewFragment"
            app:destination="@id/add_new_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/add_additional_info_fragment"
        android:name="com.blackbox.apps.karay.ui.fragments.add.AdditionalInfoFragment"
        android:label="@string/screen_additional_info"
        app:popUpToInclusive="true"
        tools:layout="@layout/fragment_additional_info">

        <action
            android:id="@+id/action_AdditionalInfoFragment_to_MainFragment"
            app:destination="@id/main_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/add_new_fragment"
        android:name="com.blackbox.apps.karay.ui.fragments.add.AddNewFragment"
        android:label="@string/screen_add_new"
        app:popUpToInclusive="true"
        tools:layout="@layout/fragment_add_new">

        <action
            android:id="@+id/action_AddNewFragment_to_AdditionalInfoFragment"
            app:destination="@id/add_additional_info_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_add_new_fragment_to_main_fragment"
            app:destination="@id/main_fragment" />

    </fragment>

    <fragment
        android:id="@+id/fragment_in_closet"
        android:name="com.blackbox.apps.karay.ui.fragments.pages.InClosetFragment"
        android:label="@string/page_in_closet"
        app:popUpToInclusive="true"
        tools:layout="@layout/fragment_view_clothings">
    </fragment>

    <fragment
        android:id="@+id/fragment_kept_away"
        android:name="com.blackbox.apps.karay.ui.fragments.pages.KeptAwayFragment"
        android:label="@string/page_kept_away"
        app:popUpToInclusive="true"
        tools:layout="@layout/fragment_view_clothings">
    </fragment>


    <fragment
        android:id="@+id/fragment_brands_list"
        android:name="com.blackbox.apps.karay.ui.fragments.pages.BrandsListFragment"
        android:label="@string/page_brands_list"
        app:popUpToInclusive="true"
        tools:layout="@layout/fragment_view_clothings">
    </fragment>

</navigation>