<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_skip"
        style="@style/TextTitleStyle.Transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/txt_skip" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_35"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_h1"
                style="@style/TextTitleStyle.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_45"
                android:text="@string/txt_add_additional_info" />

            <com.blackbox.apps.karay.utils.autoComplete.CustomAutoCompleteView
                android:id="@+id/input_women_brand_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/txt_enter_brand_name"
                android:imeOptions="actionNext" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_55"
                android:layout_marginRight="@dimen/margin_55"
                android:text="@string/txt_save"
                android:visibility="visible" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>